<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.LoginFragment">


    <ImageView
        android:layout_width="491dp"
        android:layout_height="458dp"
        android:layout_marginEnd="112dp"
        android:background="@drawable/shapecream"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="520dp"
        android:layout_height="496dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shapered"
        android:rotation="40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome back!"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:layout_constraintVertical_bias="0.291" />

    <TextView
        android:id="@+id/welcometext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Hope you will have a great time!"
        android:textAlignment="center"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcometext"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/button"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/registr_back"
        android:hint="@string/email"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@drawable/registr_back"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/forgotpassword"
        android:textStyle="bold"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/didnt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didntregister"
        android:textStyle="bold"
        android:textSize="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button"
        app:layout_constraintVertical_bias="0.112" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintVertical_bias="0.048" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

</androidx.constraintlayout.widget.ConstraintLayout>