<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.ForgotPasswordFragment">


    <ImageView
        android:layout_width="491dp"
        android:layout_height="458dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shapecream"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="520dp"
        android:layout_height="496dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="144dp"
        android:background="@drawable/shapered"
        android:rotation="40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_button" />

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/forgotpassword"
        android:textAlignment="center"
        android:textColor="@color/button"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/registr_back"
        android:hint="@string/email"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
        app:layout_constraintVertical_bias="0.053" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.048" />

    <ProgressBar
        android:id="@+id/forgot_progressbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562" />

</androidx.constraintlayout.widget.ConstraintLayout>